# clientes-data

./: .gitignore  pyproject.toml
app/: settings.py  urls.py
clientes/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
clientes/management/commands/: auditfull.py  clientes.py  fullsolution.py
clientes/migrations/: 0001_initial.py  0002_alter_fullsolution_managers_instalaciones_and_more.py  0002_track.py  0003_contrataciones.py
clientes/templates/: create_track.html  reporte_list.html
servicio/: admin.py  models.py
servicio/migrations/: 0001_initial.py
