[tool.poetry]
name = "clientes-data"
version = "0.1.0"
description = ""
authors = ["Luis <lmt@sanalto.com.mx>"]
readme = "README.md"
packages = [{include = "clientes_data"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
