[tool.poetry]
name = "clientes-data"
version = "0.1.0"
description = ""
authors = ["Luis <lmt@sanalto.com.mx>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
requests = "^2.28.2"
xls2xlsx = "^0.2.0"
pandas = "^1.5.3"
neovim = "^0.3.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
